# ct2-soundscape

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  remix.config.js  remix.env.d.ts  tsconfig.json  wrangler.toml
.github/workflows/: master-auto-deployment.yml
.github/workflows/generator/: generator.cabal  package.yaml  stack.yaml
admin-console/: .eslintrc.cjs  .gitignore  eslint.config.ts  load-context.ts  package.json  pnpm-lock.yaml  postcss.config.cjs  react-router.config.ts  remix.config.js  remix.env.d.ts  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.toml
admin-console/app/: entry.client.tsx  entry.server.tsx  env.ts  form.css  index.css  root.tsx  routes.ts
admin-console/app/routes/: _index.tsx
admin-console/functions/: [[path]].ts
admin-console/src/: contentReader.ts  conversion.ts  dataViewHelper.ts  mp3Reader.ts  multipartUploader.ts  promiseWrapper.ts  repository.ts  riffReader.ts
admin-console/worker/: authenticator.ts  index.ts  jwksClient.ts  jwt.ts  main.ts
app/: .dev.vars  .gitignore  entry.server.tsx  package.json  postcss.config.cjs  react-router.config.ts  remix.env.d.ts  root.tsx  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.toml
app/app/: entry.server.tsx  env.ts  genericResponse.ts  root.css  root.tsx  routes.ts
app/app/components/: DetailsPane.tsx  Player.tsx
app/app/routes/: _index.tsx  content.$id.details.tsx  contentDetails.tsx  (+6 more)
app/functions/: [[path]].ts
app/licenseDocuments/: googleMaterialIcons.txt  index.ts
app/routes/: _index.tsx
app/src/: localStorage.ts  repository.ts
app/worker/: index.ts  main.ts
headless-admin-console/: .editorconfig  Cargo.toml  package.json  wrangler.toml
headless-admin-console-cli/: Cargo.toml
headless-admin-console-cli/src/: creation_date.rs  main.rs  media_parser.rs
headless-admin-console-cli/src/media_parser/: mp3_parser.rs  riff_parser.rs
headless-admin-console/src/: lib.rs  license.rs
migrations/: 0000_first_mojo.sql
migrations/meta/: 0000_snapshot.json  _journal.json
prettier-config-shared/: index.ts  package.json
shared/: .gitignore  .prettierrc.toml  drizzle.config.ts  env.d.ts  generate-key.ps1  package.json  pnpm-lock.yaml  prettier.config.ts  tsconfig.json
shared/auth0/: Cargo.toml
shared/auth0/src/: lib.rs
shared/jwt-validator/: Cargo.toml
shared/jwt-validator/src/: claim_validator.rs  errorable.rs  lib.rs
shared/migrations/: 0000_special_red_shift.sql  0001_luxuriant_bromley.sql  0002_shiny_reptil.sql  0003_eager_famine.sql  0004_adorable_the_twelve.sql  0005_melodic_bloodstrike.sql  0006_watery_marvex.sql  0007_equal_moira_mactaggert.sql  0008_cynical_lyja.sql
shared/src/: content.ts  schema.ts  skip32.ts
src/: schema.ts
worker/: index.ts
(+31 files in other folders)
