[package]
name = "headless-admin-console-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
dotenv = "0.15.0"
encoding_rs = "0.8.33"
futures-lite = "2.2.0"
homedir = "0.2.1"
mime_guess = "2.0.4"
reqwest = { version = "0.11.23", features = ["stream", "json"] }
ring = "0.17.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
time = "0.3.31"
tokio = { version = "1.35.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
] }
tokio-util = { version = "0.7.10", features = ["io"] }
url = "2.5.0"
jwt-validator = { path = "../shared/jwt-validator" }
auth0 = { path = "../shared/auth0" }
