[package]
name = "headless-admin-console"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

[dependencies]
futures = "0.3.30"
hex = "0.4.3"
js-sys = "^0.3"
serde = { version = "1.0.195", features = ["derive"] }
skip32 = "1.0.5"
urlencoding = "2.1.3"
wasm-bindgen = "0.2.86"
worker = { version = "0.0.18", features = ["d1"] }
jwt-validator = { path = "../shared/jwt-validator", default-features = false, features = [
    "web",
] }
auth0 = { path = "../shared/auth0", default-features = false, features = [
    "web",
] }
