[package]
name = "auth0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["jwt-validator/std"]
web = ["jwt-validator/web"]

[dependencies]
jwt-validator = { path = "../jwt-validator", default-features = false }
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.196"
url = "2.5.0"
