[package]
name = "jwt-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["ring"]
web = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]

[dependencies]
base64 = "0.21.7"
js-sys = { version = "^0.3", optional = true }
ring = { version = "0.17.7", optional = true }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = "0.3.31"
wasm-bindgen = { version = "^0.2", optional = true }
wasm-bindgen-futures = { version = "^0.4", optional = true }

[dependencies.web-sys]
version = "^0.3"
optional = true
features = ["WorkerGlobalScope", "Crypto", "SubtleCrypto", "CryptoKey"]
